# RTSoftSS18

Day2/: Makefile  day2_1.cpp  day2_1optim.cpp  day2_3.cpp  day2_3optim.cpp  homeworkLines.cpp  lines.cpp
Day3/: Makefile  TypeTraits.cpp  array.cpp  lines.cpp
Project/: ApproxLines.cpp  ApproxLines.h  CMakeLists.txt  Field.cpp  Field.h  Makefile  SearchBall.cpp  SearchBall.h  SearchGoal.cpp  SearchGoal.h  SearchLineOnField.cpp  SearchLineOnField.h  SearchLines.cpp  SearchLines.h  proj.cpp  project.cpp
